# rs-ipc-stream2df

./: Cargo.toml  README.md  example.sh  rs-ipc-stream2df
sample.d/: tmp.file.ipc  tmp.strm.ipc
src/: coalesce.rs  df.rs  ipc.rs  lib.rs  main.rs
